fix spacing in comments section

--- a/blocks/comment/comment.css
+++ b/blocks/comment/comment.css
@@ -21,7 +21,7 @@
 @media (min-width: 1024px) {
     .comment {
         justify-content: flex-start;
-        margin: 65px 18px 0 0;
+        margin: 0 18px 0 0;
         width: calc(100% / 3);
     }
 
