--- a/blocks/comments/__container/comments__container.css
+++ b/blocks/comments/__container/comments__container.css
@@ -17,5 +17,6 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      margin: 70px auto 0;
   }
 }
